[metadata]
name = example_gauss_fit
author = Mathijs van Gorcum
author_email = mathijs@vgorcum.com
license = GNU GPL v3+
license_file = LICENSE
url = https://github.com/mvgorcum/example_gauss_fit
description = A program to fit a guassian to 2d data
long_description = file: README.md
Description-Content-Type = text/markdown

[options]
zip_safe = False
package_dir=
    =example_gauss_fit
packages=find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = 
  numpy
  scipy

[options.packages.find]
where = example_gauss_fit

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = "test"
